--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="allArt.html">View all Art</a></li>
 							<li><a href="aboutMe.html">About me</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="bookMe.html">Book Me</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Explore my work</a></li>
@@ -65,7 +65,7 @@
 										<img src="images/emily1.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Prints</a></h3>
+										<h3><a href="allArt.html" class="link">Prints</a></h3>
 										<p>Shop all prints</p>
 									</header>
 								</article>
@@ -74,7 +74,7 @@
 										<img src="images/emily2.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Multiple faces Abstract</a></h3>
+										<h3><a href="allArt.html" class="link">Multiple faces Abstract</a></h3>
 										<p>Fine Art Print</p>
 									</header>
 								</article>
@@ -83,7 +83,7 @@
 										<img src="images/emily3.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Body Postivity Naked Woman</a></h3>
+										<h3><a href="allArt.html" class="link">Body Postivity Naked Woman</a></h3>
 										<p>Colorful Nude Wall Decor</p>
 									</header>
 								</article>
@@ -92,7 +92,7 @@
 										<img src="images/emily4.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Live Art</a></h3>
+										<h3><a href="allArt.html" class="link">Live Art</a></h3>
 										<p>Showcase at Pure</p>
 									</header>
 								</article>
@@ -101,7 +101,7 @@
 										<img src="images/emily5.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Coloring Book</a></h3>
+										<h3><a href="allArt.html" class="link">Coloring Book</a></h3>
 										<p>Printable Affirmations</p>
 									</header>
 								</article>
@@ -110,7 +110,7 @@
 										<img src="images/emily6.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Live Painting</a></h3>
+										<h3><a href="bookMe.html" class="link">Live Painting</a></h3>
 										<p>Book me!</p>
 									</header>
 								</article>
@@ -124,7 +124,7 @@
 									</header>
 									<p>I'm an artist and have been painting my whole life. I've always wanted people to see my work, so now I sell colorful, geometric, and sometimes surreal fine art prints and soon will bring out some digital coloring book pages! Feel free to reach out.</p>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">Explore my work</a></li>
+										<li><a href="allArt.html" class="button next">Explore my work</a></li>
 									</ul>
 								</div>
 							</section>
