--- a/bookMe.html
+++ b/bookMe.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Elements - Forty by HTML5 UP</title>
+		<title> Book me by Emily Sellers HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>Art</strong> <span>by Emily Sellers</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -29,9 +29,9 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="allArt.html">View All Art</a></li>
+							<li><a href="aboutMe.html">About Me</a></li>
+							<li><a href="bookMe.html">Book Me</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
@@ -46,20 +46,22 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Elements</h1>
+										<h1>Book Me</h1>
 									</header>
 
 									<!-- Content -->
-										<h2 id="content">Sample Content</h2>
+										<h2 id="content">Sample Explation</h2>
 										<p>Praesent ac adipiscing ullamcorper semper ut amet ac risus. Lorem sapien ut odio odio nunc. Ac adipiscing nibh porttitor erat risus justo adipiscing adipiscing amet placerat accumsan. Vis. Faucibus odio magna tempus adipiscing a non. In mi primis arcu ut non accumsan vivamus ac blandit adipiscing adipiscing arcu metus praesent turpis eu ac lacinia nunc ac commodo gravida adipiscing eget accumsan ac nunc adipiscing adipiscing.</p>
 										<div class="row">
 											<div class="col-6 col-12-small">
-												<h3>Sem turpis amet semper</h3>
-												<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat commodo eu sed ante lacinia. Sapien a lorem in integer ornare praesent commodo adipiscing arcu in massa commodo lorem accumsan at odio massa ac ac. Semper adipiscing varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+												<h3>Art Shows</h3>
+												<p> Past Shows</br>
+													Pure</p>
 											</div>
 											<div class="col-6 col-12-small">
-												<h3>Magna odio tempus commodo</h3>
-												<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan ac praesent.</p>
+												<h3>Live Painting</h3>
+												<p> Past Shows</br>
+													Bonfire</p>
 											</div>
 											<!-- Break -->
 											<div class="col-4 col-12-medium">
