--- a/bookMe.html
+++ b/bookMe.html
@@ -50,19 +50,28 @@
 									</header>
 
 									<!-- Content -->
-										<h2 id="content">Sample Explation</h2>
-										<p>Praesent ac adipiscing ullamcorper semper ut amet ac risus. Lorem sapien ut odio odio nunc. Ac adipiscing nibh porttitor erat risus justo adipiscing adipiscing amet placerat accumsan. Vis. Faucibus odio magna tempus adipiscing a non. In mi primis arcu ut non accumsan vivamus ac blandit adipiscing adipiscing arcu metus praesent turpis eu ac lacinia nunc ac commodo gravida adipiscing eget accumsan ac nunc adipiscing adipiscing.</p>
+										<h2 id="content">Sample Explanation</h2>
+										<p>I'm available for ...</p>
 										<div class="row">
 											<div class="col-6 col-12-small">
 												<h3>Art Shows</h3>
-												<p> Past Shows</br>
-													Pure</p>
+												<pr> <i>Past Shows</i></pr>
+													<ul>
+														<li>Pure Taqueria</li>
+														<li>Blank.</li>
+														<li>Blank.</li>
+													</ul>
 											</div>
 											<div class="col-6 col-12-small">
 												<h3>Live Painting</h3>
-												<p> Past Shows</br>
-													Bonfire</p>
-											</div>
+												<pr><i>Past Shows</i></pr>
+													<ul>
+														<li>Bonfire.</li>
+														<li>Blank.</li>
+														<li>Blank.</li>
+													</ul>
+
+												</div>
 											<!-- Break -->
 											<div class="col-4 col-12-medium">
 												<h3>Interdum sapien gravida</h3>
