--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 										<img src="images/emily4.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="allArt.html" class="link">Live Art</a></h3>
+										<h3><a href="bookMe.html" class="link">Live Art</a></h3>
 										<p>Showcase at Pure</p>
 									</header>
 								</article>
@@ -189,13 +189,14 @@
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.facebook.com/emily.sellers.520" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/emilysellers.art/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.etsy.com/shop/emilysellersart" class="icon brands alt fa-etsy"><span class="label">Etsy</span></a></li>
+								<li><a href="https://www.linkedin.com/in/emily-sellers-a054b6214/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Sophie Harrison Dev
+								</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
