--- a/allArt.html
+++ b/allArt.html
@@ -63,9 +63,9 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Sed amet aliquam</h2>
+										<h2>Downloadable Prints</h2>
 									</header>
-									<p>Sandy Harrison has a new dog named flash.</p>
+									<p>Featured Items</p>
 								</div>
 							</section>
 							
@@ -73,16 +73,57 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
+										<img src="images/emily1.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Orci maecenas</h3>
+												<h3>Black and White Line Drawing Fine Art Print</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>Women Line Art, Sketched Wall Art, Living Room Decor, Line Draw Illustration, Line Art Poster.</p>
+											<p><b>Starting at 35.95</b></p>
+											<div class="table-wrapper">
+												<table class="alt">
+													<thead>
+														<tr>
+															<th>Option</th>
+															<th>Size</th>
+															<th>Price</th>
+														</tr>
+													</thead>
+													<tbody>
+														<tr>
+															<td>Item1</td>
+															<td>8x10 (9x11) inches</td>
+															<td>35.95</td>
+														</tr>
+														<tr>
+															<td>Item2</td>
+															<td>11x14 (12x15) inches</td>
+															<td>42.95</td>
+														</tr>
+														<tr>
+															<td>Item3</td>
+															<td>16x20 (17x21) inches</td>
+															<td>58.95</td>
+														</tr>
+														<tr>
+															<td>Item4</td>
+															<td>24x30 (25x31) inches</td>
+															<td>99.95</td>
+														</tr>
+													</tbody>
+													<tfoot>
+														<tr>
+															<td colspan="2"></td>
+														</tr>
+													</tfoot>
+												</table>
+											</div>
+
+									</div>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="generic.html" class="button">Buy Now</a></li> 
 											</ul>
 										</div>
 									</div>
