Created checkout page

--- a/allArt.html
+++ b/allArt.html
@@ -138,15 +138,56 @@
 												<h3>Multiple Faces Abstract Fine Art Print</h3>
 											</header>
 											<p>Portrait Orange Magenta Red, Palette Knife Painting, Wall Art Decor Poster, Original Unique.</p>
-											<ul class="actions">
-												<li><a href="generic.html" class="button">Buy Now</a></li>
-											</ul>
-										</div>
+											<p><b>Starting at 35.95</b></p>
+											<div class="table-wrapper">
+												<table class="alt">
+													<thead>
+														<tr>
+															<th>Option</th>
+															<th>Size</th>
+															<th>Price</th>
+														</tr>
+													</thead>
+													<tbody>
+														<tr>
+															<td>Item1</td>
+															<td>8x10 (9x11) inches</td>
+															<td>35.95</td>
+														</tr>
+														<tr>
+															<td>Item2</td>
+															<td>11x14 (12x15) inches</td>
+															<td>42.95</td>
+														</tr>
+														<tr>
+															<td>Item3</td>
+															<td>16x20 (17x21) inches</td>
+															<td>58.95</td>
+														</tr>
+														<tr>
+															<td>Item4</td>
+															<td>24x30 (25x31) inches</td>
+															<td>99.95</td>
+														</tr>
+													</tbody>
+													<tfoot>
+														<tr>
+															<td colspan="2"></td>
+														</tr>
+													</tfoot>
+												</table>
+											</div>
+
 									</div>
-								</section>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">Buy Now</a></li> 
+									</ul>
+								</div>
+							</div>
+						</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+										<img src="images/emily3.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
