--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="allArt.html">View all Art</a></li>
+							<li><a href="allArt.html">Portfolio</a></li>
 							<li><a href="aboutMe.html">About me</a></li>
 							<li><a href="bookMe.html">Book Me</a></li>
+							<li><a href="checkout.html">Buy Now</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Explore my work</a></li>
